Fixed issues after adding relations for line 75

--- a/prototypes/tram_stop_mapping/tram_stop_mapping.ipynb
+++ b/prototypes/tram_stop_mapping/tram_stop_mapping.ipynb
@@ -759,7 +759,9 @@
        " <overpy.Relation id=11596921>,\n",
        " <overpy.Relation id=11596922>,\n",
        " <overpy.Relation id=14542341>,\n",
-       " <overpy.Relation id=14542342>]"
+       " <overpy.Relation id=14542342>,\n",
+       " <overpy.Relation id=18756640>,\n",
+       " <overpy.Relation id=18756641>]"
       ]
      },
      "execution_count": 10,
@@ -1236,7 +1238,9 @@
        " 'Tram 64 (nocny): Os. Piastów -> Bronowice Małe',\n",
        " 'Tram 64 (nocny): Bronowice Małe -> Os. Piastów',\n",
        " 'Tram 69 (nocny): Nowy Bieżanów P+R → Górka Narodowa P+R',\n",
-       " 'Tram 69 (nocny): Górka Narodowa P+R → Nowy Bieżanów P+R']"
+       " 'Tram 69 (nocny): Górka Narodowa P+R → Nowy Bieżanów P+R',\n",
+       " 'Tram 75: Rondo Hipokratesa => Górka Narodowa P+R',\n",
+       " 'Tram 75: Górka Narodowa P+R => Rondo Hipokratesa']"
       ]
      },
      "execution_count": 12,
@@ -1273,10 +1277,10 @@
     "\n",
     "stops_by_relation = {\n",
     "    relation: [\n",
-    "        osm_node_by_id[member.resolve().id]\n",
+    "        osm_node_by_id[member.ref]\n",
     "        for member in relation.members\n",
     "        if isinstance(member, op.RelationNode)\n",
-    "        and member.resolve().id in osm_node_by_id\n",
+    "        and member.ref in osm_node_by_id\n",
     "    ]\n",
     "    for relation in osm_relations\n",
     "}\n",
@@ -1523,7 +1527,7 @@
     {
      "data": {
       "text/plain": [
-       "['75']"
+       "[]"
       ]
      },
      "execution_count": 14,
@@ -27843,7 +27847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27857,7 +27861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -27890,7 +27894,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_820ff82c33c16c18683e21105ae9042b {\n",
+       "                #map_9b9b7f5d7c03925c15c8ed80f80f4fa6 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -27904,14 +27908,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_820ff82c33c16c18683e21105ae9042b&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_9b9b7f5d7c03925c15c8ed80f80f4fa6&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_820ff82c33c16c18683e21105ae9042b = L.map(\n",
-       "                &quot;map_820ff82c33c16c18683e21105ae9042b&quot;,\n",
+       "            var map_9b9b7f5d7c03925c15c8ed80f80f4fa6 = L.map(\n",
+       "                &quot;map_9b9b7f5d7c03925c15c8ed80f80f4fa6&quot;,\n",
        "                {\n",
        "                    center: [50.05, 19.95],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -27928,7 +27932,7 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_8fe7b0a9634ed1f9f797db82f57f10d1 = L.tileLayer(\n",
+       "            var tile_layer_f0842cf2d9fb5c3b7760ac057a6d28cf = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {\n",
        "  &quot;minZoom&quot;: 0,\n",
@@ -27945,22 +27949,22 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_8fe7b0a9634ed1f9f797db82f57f10d1.addTo(map_820ff82c33c16c18683e21105ae9042b);\n",
+       "            tile_layer_f0842cf2d9fb5c3b7760ac057a6d28cf.addTo(map_9b9b7f5d7c03925c15c8ed80f80f4fa6);\n",
        "        \n",
        "    \n",
-       "            var poly_line_314875c7140143680e1fe9788dfebc7b = L.polyline(\n",
-       "                [[50.0841851, 20.0649613]],\n",
+       "            var poly_line_11babdaf72574b63d601513e99c997ea = L.polyline(\n",
+       "                [[50.0405497, 19.9909354], [50.0406845, 19.9816557], [50.0406551, 19.9780903], [50.0446379, 19.9735635], [50.0490275, 19.9675709], [50.0499345, 19.964249], [50.0578951, 19.9602845], [50.058859, 19.9625253], [50.0600009, 19.9667934], [50.0604483, 19.9701478], [50.0595975, 19.9762903], [50.0607203, 19.9791889], [50.0641686, 19.9888731], [50.0656706, 19.9974971], [50.0673624, 20.0053794], [50.0692017, 20.0122007], [50.0732996, 20.0188582], [50.0721971, 20.0298149], [50.0713062, 20.0383798], [50.0698355, 20.0453049], [50.0686049, 20.0521338], [50.0674818, 20.0598724], [50.0677378, 20.0649285], [50.0696764, 20.0670509], [50.0786832, 20.0659976], [50.0835633, 20.0655949], [50.0841851, 20.0649613]],\n",
        "                {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;#3388ff&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: false, &quot;fillColor&quot;: &quot;#3388ff&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;noClip&quot;: false, &quot;opacity&quot;: 1.0, &quot;smoothFactor&quot;: 1.0, &quot;stroke&quot;: true, &quot;weight&quot;: 3}\n",
-       "            ).addTo(map_820ff82c33c16c18683e21105ae9042b);\n",
+       "            ).addTo(map_9b9b7f5d7c03925c15c8ed80f80f4fa6);\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x7fee2da31610>"
+       "<folium.folium.Map at 0x7f113805a990>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
