graph transformation with adding nodes

--- a/server/src/graph_maker/download_data.ipynb
+++ b/server/src/graph_maker/download_data.ipynb
@@ -10,7 +10,8 @@
     "import os\n",
     "import json\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
-    "from overpass_client import OverpassClient\n"
+    "from overpass_client import OverpassClient\n",
+    "city = \"Kraków\"\n"
    ]
   },
   {
@@ -26,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = OverpassClient.get_tram_stops_and_crossroads(\"Kraków\")\n",
+    "result = OverpassClient.get_tram_stops_and_crossroads(city)\n",
     "\n",
     "ways_data = []\n",
     "for way in result.ways:\n",
@@ -56,10 +57,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = OverpassClient.get_tram_stops_and_crossroads_coordinate(city)\n",
+    "nodes_data = []\n",
+    "for node in result.nodes:\n",
+    "    nodes_data.append({\n",
+    "        \"id\": node.id,\n",
+    "        \"lat\": float(node.lat),\n",
+    "        \"lon\": float(node.lon),\n",
+    "    })\n",
+    "with open(\"tram_stops_crossroads_coords.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(nodes_data, f, indent=4, ensure_ascii=False)\n",
+    "\n",
+    "result = OverpassClient.get_track_geometry(city)\n",
+    "features = []\n",
+    "\n",
+    "for way in result.ways:\n",
+    "    coords = [(float(node.lon), float(node.lat)) for node in way.nodes]\n",
+    "    features.append({\n",
+    "        \"type\": \"Feature\",\n",
+    "        \"properties\": {\n",
+    "            \"id\": way.id,\n",
+    "            \"tags\": way.tags\n",
+    "        },\n",
+    "        \"geometry\": {\n",
+    "            \"type\": \"LineString\",\n",
+    "            \"coordinates\": coords\n",
+    "        }\n",
+    "    })\n",
+    "\n",
+    "geojson = {\n",
+    "    \"type\": \"FeatureCollection\",\n",
+    "    \"features\": features\n",
+    "}\n",
+    "\n",
+    "with open(\"track_geometry.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(geojson, f, ensure_ascii=False, indent=2)"
+   ]
   }
  ],
  "metadata": {
